# autonomous_car

./: CMakeLists.txt  README.md
examples/: demo.cpp
src/: autonomous_car.cpp  autonomous_car.h
stop_sign_cascade_training/: cascade.xml
stop_sign_cascade_training/classifier/: cascade.xml  log.txt  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
utils/: capture_image.cpp
